--- a/src/app/templates/menu/menu.component.html
+++ b/src/app/templates/menu/menu.component.html
@@ -1,5 +1,1 @@
-<p-menubar [model]="items">
-	<ng-template pTemplate="start">
-		<img src="assets/images/logo_menu.png" height="40" class="p-mr-2" alt="brand logo" />
-	</ng-template>
-</p-menubar>
+<p-menubar [model]="items"> </p-menubar>
