--- a/src/app/templates/sidepanel/sidepanel.component.html
+++ b/src/app/templates/sidepanel/sidepanel.component.html
@@ -1,4 +1,10 @@
-<div class="card">
+<p-image *ngIf="visibilityService.previewVisible" src="assets/images/noImageSelected.png" alt="previewImage" width="300" height="300"> </p-image>
+<div class="identifyButtonContainer">
+	<p-button (onClick)="identifySelected()" [style]="{ padding: '0px' }" pRipple>Identify selected images</p-button>
+	<div style="width: 15px"></div>
+	<p-button (onClick)="identifyAll()" [style]="{ padding: '0px' }" pRipple>Identify all images</p-button>
+</div>
+<div class="card" *ngIf="visibilityService.detailsVisible">
 	<p-fieldset>
 		<ng-template pTemplate="header">
 			<div class="flex align-items-center text-primary">
