--- a/src/app/templates/mainImagePanel/main-image-panel.component.html
+++ b/src/app/templates/mainImagePanel/main-image-panel.component.html
@@ -19,8 +19,14 @@
 		</div>
 	</div>
 	<div *ngIf="!visibilityService.showAsGallery" style="flex-grow: 1">
+		<div class="listRow" style="background-color: white">
+			<div class="listImage" style="font-weight: bold"></div>
+			<div class="listID" style="font-weight: bold">ID</div>
+			<div class="listFileName" style="font-weight: bold">Name</div>
+			<div class="listFileType" style="font-weight: bold">Type</div>
+		</div>
 		<div *ngFor="let file of getFiles()" style="flex-grow: 1">
-			<a (click)="imageClick(file, $event)" pTooltip="Name: {{ file.file.name }}" class="imageHover">
+			<a (click)="imageClick(file, $event)" pTooltip="Name: {{ file.file.name }}" class="imageHover unselectable">
 				<div
 					[ngStyle]="{
 						display: 'flex',
@@ -34,11 +40,10 @@
 						'background-color': file.selected ? '#6495ED' : 'white',
 					}"
 					>
-						<div class="listImage"><p-image src="assets/images/icon_image_30.png"></p-image></div>
+						<div class="listImage"><img [src]="file.url" width="30px" height="30px" /></div>
 						<div class="listID">{{ file.id }}</div>
 						<div class="listFileName">{{ file.file.name }}</div>
 						<div class="listFileType">{{ file.file.type }}</div>
-						<div class="listFilePath">{{ file.url }}</div>
 					</div>
 				</div>
 			</a>
