removed productsearch, textresults and updated export dialog

--- a/src/app/styles/sidepanel/export-dialog.component.less
+++ b/src/app/styles/sidepanel/export-dialog.component.less
@@ -45,4 +45,38 @@
 	align-content: flex-start;
 	justify-content: flex-start;
 	align-items: flex-start;
+	row-gap: 5px;
+}
+
+.imageColorsTag {
+	font-weight: bold;
+	border: 1px solid black;
+}
+
+.imageColorInfo {
+	display: flex;
+	gap: 2px;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid black;
+	padding: 5px;
+}
+
+.fullImageRow {
+	display: flex;
+	justify-content: flex-start;
+	gap: 10px;
+	padding: 5px;
+	border: 1px solid black;
+	border-radius: 10px;
+	font-weight: 700;
+	text-align: center;
+	justify-items: start;
+	flex-direction: row;
+	align-items: center;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
