Changes: - added removing identified attributes - fixed image details bugs - changed to bootstrap purple dark theme - changed NoImageSelected picture - changed selection behaviour

--- a/src/app/styles/menu/about-dialog.component.less
+++ b/src/app/styles/menu/about-dialog.component.less
@@ -1,13 +1,14 @@
 .tag {
-	background-color: teal;
+	background-color: #c298d8;
+	color: black;
 	padding: 1rem;
-	color: white;
 	border-radius: 10px;
 	font-weight: bold;
+	text-align: center;
+	width: auto;
 }
 
 .info {
-	background-color: rgb(233, 233, 233);
 	padding: 1rem;
 	border-radius: 10px;
 	font-weight: bold;
