--- a/src/app/styles/sidepanel/sidepanel.component.less
+++ b/src/app/styles/sidepanel/sidepanel.component.less
@@ -3,7 +3,6 @@
 	justify-content: center;
 	align-items: flex-start;
 	align-content: flex-start;
-	background-color: #00ffa126;
 	border-radius: 10px;
 	flex-shrink: 0;
 	padding-left: 1px;
@@ -18,8 +17,6 @@
 ::ng-deep .p-fieldset .p-fieldset-legend {
 	padding: 7px;
 	border: 3px solid #dee2e6;
-	color: white;
-	background: teal;
 	font-weight: 700;
 	border-radius: 6px;
 }
@@ -29,17 +26,16 @@
 }
 
 .tag {
-	background-color: teal;
+	background-color: #c298d8;
+	color: black;
 	padding: 5px;
-	color: white;
 	border-radius: 10px;
 	font-weight: bold;
-	text-align: left;
+	text-align: center;
 	width: 100px;
 }
 
 .info {
-	background-color: rgba(233, 233, 233, 0.5);
 	padding: 5px;
 	border-radius: 10px;
 	font-weight: normal;
@@ -49,7 +45,6 @@
 }
 
 .previewContainer {
-	background-color: teal;
 	width: 315px;
 	height: 315px;
 	display: flex;
@@ -60,7 +55,6 @@
 }
 
 .identifyButtonContainer {
-	background-color: teal;
 	width: 100%;
 	display: flex;
 	padding: 5px;
@@ -68,17 +62,18 @@
 	align-content: center;
 	justify-content: center;
 	align-items: center;
+	font-weight: bold;
 	gap: 10px;
 }
 
-::ng-deep .p-splitbutton {
-	.ui-menu {
-		width: 310px;
-	}
+.w-100 {
+	width: 100%;
 }
 
-::ng-deep .p-tieredmenu {
-	.p-tieredmenu-overlay {
-		width: 310px;
+::ng-deep .p-splitbutton {
+	width: 100%;
+	font-weight: bold;
+	.p-component {
+		width: 100%;
 	}
 }
